--- a/todo.org
+++ b/todo.org
@@ -33,5 +33,7 @@ CLOSED: [2020-05-04 Mon 23:08]
 CLOSED: [2020-05-04 Mon 23:08]
 ** TODO Session Description Viewing
 ** TODO Live transmission stats
+** DONE Handle user disconnect from webrtc
+CLOSED: [2020-05-05 Tue 11:25]
 ** DONE Random room
 CLOSED: [2020-05-04 Mon 21:25]
